chore (bookgenre): cleanup
- optimization --> dont return empty List.of() rather Collections.emptyList()